# chrono-message

./: .gitignore  docker-compose.yml
api/: Dockerfile  config_template.ini  makefile  pyproject.toml
api/app/: main.py  pyproject.toml
api/app/auth/: auth.py
api/app/database/: client.py  models.py
api/app/database/repositories/: user_repository.py
api/app/database/sql/: init.sql  insert_test_data.sql  reset_test_data.sql
api/app/graphene/query/: __init__.py  account.py  message.py  user.py
api/tests/: test_user.py
client/: .eslintrc.js  Dockerfile  package-lock.json  package.json
client/app/: .eslintrc.js  package.json  tailwind.config.js
client/app/src/: firebase.ts  index.tsx
client/app/src/components/pages/: Auth.tsx  User.tsx
client/app/src/components/parts/: GoogleIcon.tsx
client/app/src/components/provider/: AuthProvider.tsx
client/app/src/components/templates/auth/: PassAuth.tsx
client/app/src/state/atoms/: UserAtom.ts
client/src/: App.tsx  Login.tsx  firebase.ts
client/src/components/pages/: Login.tsx  Top.tsx  User.tsx
client/src/components/parts/: passwordInput.tsx
client/src/components/provider/: AuthProvider.tsx
client/src/components/templates/: authForm.stories.ts  authForm.tsx
client/src/components/templates/auth/: GoogleAuth.tsx  PassAuth.tsx
client/src/state/atoms/: UserAtom.ts
client/src/stories/: Page.tsx
