[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["nyuta <nyuta.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
graphene = "^3.2.2"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
